tests/NormalTests/paczka1/fuzzy1/89602677.err
Error in line 2: JBhRY60AYXr S974 15,1
Error in line 3: waxJ S974 20,2
Error in line 14: j8vPX A878 48,1
Error in line 19: Fceg S876 59,9
Error in line 27: S901 A878 4,4
Error in line 36: waxJ S974 53,3
